Kipi-plugins 1.6.0 - Release date: 2010/12/19
------------------------------------------------------------------------

NEW FEATURES:


BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> RedEyesRemoval : 236385 : digiKam and Gwenview crash on red eye removing.
002 ==> PrintWizzard   : 254103 : "previous photo" and "next page" in the same context.
003 ==> DNGConverter   : 254205 : Compiling fails on SPARC platform because "qDNGBigEndian" macro is not defined.
004 ==> PicasaExport   : 232896 :  Application crashed after restarting an upload to picassa with previous change of selected photos.
005 ==> DNGConverter   : 212125 : DNG files do not have image contents.
006 ==> 






