@@ -6,7 +6,6 @@ All:
 
 Canon:
 - Check if storing active sensor area could be enabled again (Bug with 5MKII, propably solved)
-- Store makernotes in DNGPrivateData field
-  Question: how to decode them, they are currently not displayed (Exiv2 or Digikam bug?)
+
 
 
