@@ -9,9 +9,10 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 001 ==> RedEyesRemoval : 236385 : digiKam and Gwenview crash on red eye removing.
 002 ==> PrintWizzard   : 254103 : "previous photo" and "next page" in the same context.
 003 ==> DNGConverter   : 254205 : Compiling fails on SPARC platform because "qDNGBigEndian" macro is not defined.
-004 ==> PicasaExport   : 232896 :  Application crashed after restarting an upload to picassa with previous change of selected photos.
+004 ==> PicasaExport   : 232896 : Application crashed after restarting an upload to picassa with previous change of selected photos.
 005 ==> DNGConverter   : 212125 : DNG files do not have image contents.
-006 ==> 
+006 ==> DNGConverter   : 255137 : some exifdata lost when converting CR2.
+007 ==>
 
 
 
